xx21: fix chat message overflow

--- a/frontend/src/components/chat/chat-area/ChatArea.css
+++ b/frontend/src/components/chat/chat-area/ChatArea.css
@@ -12,6 +12,8 @@
 
 #chat-area .ant-layout-content {
   padding: 0;
+  max-height: 70vh;
+  overflow: scroll;
   background-color: #f0f2f5;
 }
 
